--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,13 @@
-.main-container{
+.main-container {
   margin-top: 40px;
   margin-bottom: 150px;
 }
 
-.puntero{
+.puntero {
   cursor: pointer;
 }
 
-.w120{
+.w120 {
   width: 120px;
 }
 
@@ -40,3 +40,20 @@
   animation-name: fadeIn;
 }
 
+.left-inner-addon {
+  position: relative;
+  font-size: 16px;
+  font-weight: unset;
+  text-align: initial;
+}
+.left-inner-addon input {
+  padding-left: 25px;
+}
+.left-inner-addon i {
+  color: #495057;
+  position: absolute;
+  padding: 7px 12px;
+  pointer-events: none;
+  font-style: normal;
+  line-height: 1.5;
+}
