chore: Se agrega funcionalidad para generar PDF

--- a/src/app/components/heroes/heroe.component.html
+++ b/src/app/components/heroes/heroe.component.html
@@ -68,8 +68,6 @@
 </div>
 
 <div class="col-xs-6">
-
-
     <div class="card mt-4">
         <div class="card-header">
             Directiva con evento de mouse
@@ -96,7 +94,10 @@
             </div>
         </div>
     </div>
-
-
-
+</div>
+<div>
+    <button class="btn btn-danger" (click)="generarPDF()">
+        <i class="fas fa-file-pdf fa-lg fa-fw"></i>
+        Generar PDF
+    </button>
 </div>
